SMG2 Merge: apply code refactorings proposed by CI tools